라이브러리 변경 : org.json.simple.jsonObject -> org.json  - 공공데이터 파서 수정public data parser  - 컨트롤러 requestBody JSONObject -> String
실시간 통신
 - 변수 객체(Value Object) 생성 (EditValues, UserList)
 - 사용자 데이터베이스 삽입 컨트롤러에서 실시간 통신으로 변경(진행중)